Fixed overlapping of elements on small page height - For this, simply assigned min-height on each component.

--- a/src/components/HomeContactUs/HomeContactUs.scss
+++ b/src/components/HomeContactUs/HomeContactUs.scss
@@ -4,7 +4,7 @@
 
 .contact-us{
   padding: 0 15% 20%;
-  height: 100vh;
+  // height: 100vh;
   max-height: 730px;
   display: flex;
   flex-direction: column;
