--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -99,6 +99,8 @@
 .about-intro-wrapper{
   display: flex;
   width: 100%;
+  height: 100%;
+  min-height: 250px;
   position: relative;
 }
 
@@ -165,9 +167,11 @@
 }
 
 .faq-intro-wrapper{
+  min-height: 210px;
   display: flex;
   flex-direction: column;
   position: relative;
+
 
   @include tablet{
     flex-direction: row;
